@@ -4,6 +4,17 @@ Magit-annex NEWS -- history of user-visible changes   -*- mode: org; -*-
 
 ** New features
 
+- File action commands now support Dired buffers.  The file at point
+  (or marked files) is used as the default for completion.
+
+  Consider binding ~magit-annex-file-action-popup~ to a key in Dired
+  buffers.  If you are using git-annex.el, you can bind the popup to
+  ~@f~ like this:
+
+  #+begin_src emacs-lisp
+  (define-key git-annex-dired-map "f" #'magit-annex-file-action-popup)
+  #+end_src
+
 - In ~magit-annex-list-mode~ buffers, file action commands now
   consider files selected by the region when choosing a default for
   completion.
